--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
             <span>Notepad - 할 일 목록</span>
           </div>
           <div class="notepad-todos__header__icons">
-            <img src="img/min.png" alt="" />
-            <img src="img/max.png" alt="" />
-            <img src="img/close.png" id="close-button" alt="" />
+            <button class="min"></button>
+            <button class="max"></button>
+            <button class="close"></button>
           </div>
         </div>
         <div class="notepad-todos__main">
           <img id="notepad-todos-image" src="" alt="" />
           <form class="todos-form hidden" id="todos-form" action="">
-            <input id="todos-input" type="text" placeholder="오늘의 할 일은?" required />
+            <input
+              id="todos-input"
+              type="text"
+              placeholder="오늘의 할 일은?"
+              required
+            />
           </form>
           <ul class="hidden" id="todos"></ul>
           <h4>내 컴퓨터를 열어 로그인을 해주세요.</h4>
@@ -54,9 +59,9 @@
             <span>시스템 등록 정보</span>
           </div>
           <div class="notepad-todos__header__icons">
-            <img src="img/min.png" alt="" />
-            <img src="img/max.png" alt="" />
-            <img src="img/close.png" id="close-button" alt="" />
+            <button class="min"></button>
+            <button class="max"></button>
+            <button class="close"></button>
           </div>
         </div>
         <div class="computer-greeting__main">
@@ -106,10 +111,18 @@
             <div class="vertical-line"></div>
             <div class="vertical-outline"></div>
           </div>
-          <img src="img/desktop-1.png" alt="" />
-          <img src="img/msie1-1.png" alt="" />
-          <img src="img/outlook_express-1.png" alt="" />
-          <img src="img/netmeeting-2.png" alt="" />
+          <div class="start-bar__icon-wrapper">
+            <img src="img/desktop-1.png" alt="" />
+          </div>
+          <div class="start-bar__icon-wrapper">
+            <img src="img/msie1-1.png" alt="" />
+          </div>
+          <div class="start-bar__icon-wrapper">
+            <img src="img/outlook_express-1.png" alt="" />
+          </div>
+          <div class="start-bar__icon-wrapper">
+            <img src="img/netmeeting-2.png" alt="" />
+          </div>
         </div>
         <div class="start-bar__clock-wrap">
           <div class="vertical-line-wrap">
